# knowledge-graph

./: .gitignore  CLAUDE.md  PROJECT_ISSUES_STATUS.html  PROJECT_ISSUES_STATUS.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  reports_honhai_20260213.md  reports_honhai_20260213.txt
backend/: Dockerfile  logic.py  main.py  requirements.txt
backend/api/: errors.py  models.py
backend/config/: parsing.py  settings.py
backend/jobs/: runtime.py  store.py
backend/llm_kg/: .dockerignore  Dockerfile  README.md  docker-compose.e2e.yml  docker-compose.llmkg.yml  e2e_runner.py  kg_builder.py  llm_api.py  llm_client.py  llm_deploy.py  nl2cypher.py  requirements.txt  run_e2e_mlx_local.sh
backend/tests/: test_e2e_integration.py  test_ingest_service.py  test_logic.py  test_main.py  test_qa_service.py  test_settings.py
demo/llm_api/: main.py
frontend/: nginx.conf  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
genai_project/: requirements.txt
genai_project/llm_kg/: e2e_runner.py  llm_client.py  llm_deploy.py
鴻海/: .env.local.example  .gitignore  ARCHITECTURE.md  README.md  genai-graphdb-openclaw-briefing.backup-20260213-093020.pptx  genai-graphdb-openclaw-briefing.pptx  reports_honhai_20260213_gemini.md  reports_honhai_20260213_gemini.txt
鴻海/backend/: Dockerfile  logic.py  main.py
鴻海/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
鴻海/frontend/src/: api.ts  (+1 more)
鴻海/genai_project/: README.md  docker-compose.llmkg.yml
鴻海/pptx_build/: build_presentation.js  package-lock.json  package.json
(+214 files in other folders)
