[project]
name = "genai-kg-workspace"
version = "0.1.0"
description = "Enterprise Gen-AI KG prototype with uv-managed Python environments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
backend = [
  "beautifulsoup4>=4.12.3",
  "duckduckgo-search>=8.0.0",
  "fastapi>=0.111.0",
  "neo4j>=5.24.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]
llmkg = [
  "fastapi>=0.111.0",
  "google-genai>=1.0.0",
  "jsonschema>=4.23.0",
  "mlx-lm>=0.17.0",
  "neo4j>=5.24.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]
demo = [
  "fastapi>=0.111.0",
  "neo4j>=5.24.0",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
]
dev = [
  "httpx>=0.27.0",
  "pytest>=7.4.0",
]

[tool.uv]
package = false
